--- a/templates/index.html
+++ b/templates/index.html
@@ -69,33 +69,9 @@
 
         <form>
           <div class="transcription-container flex gap-4 w-full justify-center">
-            <!-- <div class="min-w-xl">
-              <label for="transcript" class="block mb-2 text-sm font-medium text-gray-900"> Current subtitles </label>
-
-              <textarea
-                type="text"
-                id="transcript"
-                class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 resize-y"
-                placeholder="Current subtitle"
-                readonly
-                rows="20"
-                cols="30"
-              ></textarea>
-            </div> -->
+            
             <div class="">
-              <div
-                id="welcome-banner"
-                class="bg-blue-800 text-white text-center p-4 shadow-lg m-4 border border-blue-900 rounded-lg"
-              >
-                <p class="text-lg font-semibold">
-                  🚀 Welcome {{current_user.first_name }} {{ current_user.last_name }}.
-                </p>
-                <p class="text-md font-semibold">
-                  Please Instructions: Modify the text of the conversation as your hear it, correcting inaccuracies and
-                  adding audio cues like [YAWN] as necessary. Please use only directional keys and mouse to navigate
-                  ⬆️⬇️⬅️➡️
-                </p>
-              </div>
+              {% include 'components/welcome_banner.html' %}
               <label for="editable-transcript" class="block mb-2 text-sm font-medium text-gray-900"> </label>
 
               <textarea
