--- a/templates/create_test.html
+++ b/templates/create_test.html
@@ -48,11 +48,11 @@
             class="w-full px-3 py-2 text-gray-700 border rounded-lg focus:outline-none"
             placeholder="Enter text"
           />
-          <spsman class="error-message text-red-300"></spsman>
+          <span class="error-message text-red-300"></span>
         </div>
         <div class="mb-6">
           <label for="fileupload" class="block text-sm font-medium text-gray-700 mb-2"
-            >Please upload the .srt file here, To create one, go to a transcription website, I recommend
+            >Please upload the .srt file here after modifying it to match the wrong transcription. To create an srt file, go to a transcription website, I recommend
             <a class="font-bold" href="https://turboscribe.ai">turboscribe.ai</a></label
           >
           <input
@@ -88,4 +88,3 @@
     <script></script>
   </body>
 </html>
-<!-- TODO add audio file upload -->
