--- a/templates/components/welcome_banner.html
+++ b/templates/components/welcome_banner.html
@@ -1,7 +1,15 @@
-<div id="welcome-banner" class="bg-blue-800 text-white text-center p-4 shadow-lg m-4 border border-blue-900 rounded-lg">
+<div id="welcome-banner" class="bg-blue-800 text-white p-4 shadow-lg m-4 border border-blue-900 rounded-lg">
   <p class="text-lg font-semibold">🚀 Welcome {{ current_user.first_name }} {{ current_user.last_name }}.</p>
-  <p class="text-md font-semibold">
-    Please Instructions: Modify the text of the conversation as you hear it, making corrections as you see fit. Please
-    use only directional keys and mouse to navigate ⬆️⬇️⬅️➡️
-  </p>
+  <p class="text-md font-semibold">Please Read These Instructions:</p>
+  <ol>
+    <li>
+      Modify the text of the conversation as you hear it, making corrections as you see fit. Please use only directional
+      keys and mouse to navigate ⬆️⬇️⬅️➡️
+    </li>
+    <li>
+      Click 'NEXT' when first audio ends, Click 'PLAY' to start the next audio. After everything, 'SUBMIT' to send your
+      response.
+    </li>
+    <li>GOODLUCK!</li>
+  </ol>
 </div>
