--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
   <body>
     {% include 'components/spinner.html' %}
     <header class="flex justify-between items-center py-4 px-4 bg-gray-200 shadow-md">
-      <h1 class="text-2xl font-bold">Listening Assessment test</h1>
+      <h1 class="text-2xl font-bold">Listening Assessment Test</h1>
       <a href="/transcription/create_test">Create new test</a>
 
       <div class="relative">
