--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,7 @@
     <header class="flex justify-between items-center py-4 px-4 bg-gray-200 shadow-md">
       <h1 class="text-2xl font-bold">Listening Assessment Test</h1>
       <a href="/transcription/create_test">Create new test</a>
+      <a href="/analytics/stats">View Stats</a>
 
       <div class="relative">
         <button
