feat: similarity scoring

--- a/templates/index.html
+++ b/templates/index.html
@@ -111,7 +111,7 @@
         >
           <div class="relative p-4 w-full max-h-full">
             <!-- Modal content -->
-            <div class="relative  rounded-lg shadow-sm bg-gray-700">
+            <div class="relative rounded-lg shadow-sm bg-gray-700">
               <!-- Modal header -->
               <div
                 class="flex items-center justify-between p-4 md:p-5 border-b rounded-t border-gray-600 border-gray-200"
@@ -142,7 +142,7 @@
                 </button>
               </div>
               <!-- Modal body -->
-              <div class="p-4 md:p-5 space-y-4 text-white" id="score-modal-body">
+              <div class="p-4 md:p-5 space-y-4 text-white overflow-y-auto max-h-[60vh]" id="score-modal-body">
                 <p class="text-white">Loading score...</p>
               </div>
 
