fix: minor tweak

--- a/templates/stats.html
+++ b/templates/stats.html
@@ -23,7 +23,7 @@
         <tr class="text-left">
           <th>Rank</th>
           <th>Name</th>
-          <th>Score</th>
+          <th>Score(Avg)</th>
           <th>Test Type</th>
           <th>Date of Test</th>   
         </tr>
