--- a/templates/take_test.html
+++ b/templates/take_test.html
@@ -118,7 +118,7 @@
         >
           <div class="relative p-4 w-full max-h-full">
             <!-- Modal content -->
-            <div class="relative bg-white rounded-lg shadow-sm dark:bg-gray-700">
+            <div class="relative bg-gray-700 rounded-lg shadow-sm dark:bg-gray-700">
               <!-- Modal header -->
               <div
                 class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600 border-gray-200"
