--- a/templates/tests.html
+++ b/templates/tests.html
@@ -36,7 +36,7 @@
                 href="{{ url_for('transcription.take_test') }}?test_id={{ test.id }}"
                 class="text-blue-600 hover:text-blue-800 font-medium"
               >
-                Take Test
+<!--                 Take Test -->
               </a>
               <a
                 href="{{ url_for('transcription.edit_test', id=test.id) }}"
